Inicio do input

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,6 +4,13 @@
     secondaryBtnText="Signup Now"
 >
     <form [formGroup]="loginForm">
-        
+        <app-primary-input
+            formName="email"
+            type="email" 
+            label="Email"
+            placeholder="johndoe@gmail.com"
+        >
+            <img src="../../../assets/svg/email-icon.svg">
+        </app-primary-input>
     </form>
 </app-default-login-layout>
