--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -12,14 +12,14 @@
                     {{primaryBtnText}}</button>
             <div class="divider">
                 <div></div>
-                <span>or</span>
+                <span>ou</span>
                 <div></div>
             </div>
             <button class="btn-secondary" (click)="navigate()">{{secondaryBtnText}}</button>
         </div>
     </section>
     <section class="main-section">
-        <h1>You Should, MoveIt!</h1>
+        <h1>Você deveria, MoveIt!</h1>
         <img src="../../../assets/svg/main-illustration.svg"/>
     </section>
 </main>
