--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <app-default-login-layout
-    title="Login into your account"
-    primaryBtnText="Login Now"
-    secondaryBtnText="Signup Now"
+    title="Conecte-se em sua conta!"
+    primaryBtnText="Conecte-se"
+    secondaryBtnText="Inscreva-se"
     (submit)="submit()"
     (navigate)="navigate()"
     [disablePrimaryBtn]="!loginForm.valid"
@@ -20,10 +20,10 @@
             formControlName="password"
             inputName="password"
             type="password" 
-            label="Your Password"
+            label="Sua senha"
         >
             <img src="../../../assets/svg/password-icon.svg">
         </app-primary-input>
-        <span>Forgot password?</span>
+        <span>Esqueceu sua senha?</span>
     </form>
 </app-default-login-layout>
